basalt/src/note_editor/snapshots/basalt_tui__note_editor__render__tests__snapshot_block_quote_note_with_title.snap
---
source: basalt/src/note_editor/render.rs
expression: virtual_block_to_string(&block)
---
ℹ NOTE: My Title
┃ Test body content.
