basalt/src/note_editor/snapshots/basalt_tui__note_editor__render__tests__snapshot_footnote_section.snap
---
source: basalt/src/note_editor/render.rs
expression: "lines.join(\"\\n\")"
---
════════════════════════════════════════
[1]: First footnote content
[2]: Second footnote content
