basalt/src/note_editor/snapshots/basalt_tui__note_editor__render__tests__table_unicode.snap
---
source: basalt/src/note_editor/render.rs
expression: s
---
┌───────┬─────┬────────┐
│ Name  │ Age │  City  │
├───────┼─────┼────────┤
│ Alice │  28 │ London │
│ Bob   │  34 │ Paris  │
└───────┴─────┴────────┘
