basalt/src/note_editor/snapshots/basalt_tui__note_editor__render__tests__table_unicode_wide_chars.snap
---
source: basalt/src/note_editor/render.rs
expression: s
---
┌──────┬───────┐
│ Name │ Score │
├──────┼───────┤
│ 日本 │   100 │
│ 中国 │    99 │
└──────┴───────┘
